[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/objective.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/objectif_detection_ring.png" type="Texture" id=2]
[ext_resource path="res://src/Objectives/Objective.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 4.20515 )

[node name="Objective" type="StaticBody2D"]
collision_layer = 64
script = ExtResource( 3 )

[node name="DetectionRing" type="Sprite" parent="."]
scale = Vector2( 1.24116, 1.24116 )
texture = ExtResource( 2 )

[node name="ActivationArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivationArea"]
position = Vector2( -0.275607, 0 )
scale = Vector2( 4, 4 )
shape = SubResource( 1 )

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.8614 )
shape = SubResource( 2 )

[node name="Activable" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.121039 )
texture = ExtResource( 1 )
[connection signal="body_entered" from="ActivationArea" to="." method="_on_ActivationArea_body_entered"]
[connection signal="body_exited" from="ActivationArea" to="." method="_on_ActivationArea_body_exited"]
